--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <style>
-    .content {
-      opacity: 0;
-      transition: opacity 1s ease-in;
+    .container {
+      height: 100vh;
     }
 
-    .loaded {
-      opacity: 1;
+    .input-group{
+      width: 100%;
     }
 
-    .input-group {
-      margin-bottom: 15px;
+    .cont {
+      margin-bottom: 5%;
     }
 
-    .clear-complete {
-      margin-bottom: 15px;
+    .input-distance {
+      text-align: right;
     }
+
   </style>
 </head>
 <body>
   <div class="container">
+
   </div>
 </body>
 <script src="main.js"></script>
