--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
       text-align: right;
     }
 
+    .error {
+      color: red;
+    }
+
+    .thanks {
+      opacity: 0;
+      transition: opacity 1s ease-in;
+    }
+
+    .fade {
+      opacity: 1;
+    }
+
   </style>
 </head>
 <body>
