--- a/index.html
+++ b/index.html
@@ -1,34 +1,56 @@
+<!doctype html>
 <head>
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    .container {
-      height: 100vh;
-    }
+  <meta charset="utf-8">
+    <title>join the meet up tribe</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <style>
+      .row {
+        height: 10vh;
+      }
 
-    .input-group{
-      width: 100%;
-    }
+      .input-group{
+        margin-top: 5%;
+        width: 100%;
+        height: 80vh;
+      }
 
-    .cont {
-      margin-bottom: 5%;
-    }
+      .cont {
+        margin-bottom: 5%;
+      }
 
-    .input-distance {
-      text-align: right;
-    }
+      .input-distance {
+        text-align: right;
+      }
 
-    .error {
-      color: red;
-    }
+      .error {
+        color: red;
+      }
 
-    .thanks {
-      opacity: 0;
-      transition: opacity 1s ease-in;
-    }
+      body > div > div > div.input-group > div.thanks.text-center.fade{
+        margin-top: 40%;
+      }
 
-    .fade {
-      opacity: 1;
+      .thanks {
+        opacity: 0;
+        transition: opacity 1s ease-in;
+      }
+
+      .fade {
+        opacity: 1;
+      }
+
+    /* Smartphones (portrait) ----------- */
+    @media only screen and (max-width : 420px) {
+      .error {
+        margin-top: 25%;
+      }
+
+      .row {
+        font-size: 0.7em;
+      }
     }
 
   </style>
