--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </style>
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container" align="center"></div>
 </body>
 <script src="main.js"></script>
 <script>
