--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     }
 
   </style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 <body>
   <div class="container" align="center"></div>
