--- a/mapmarker.html
+++ b/mapmarker.html
@@ -17,25 +17,23 @@
 <body>
     <div id="map" style="width: 94%; height: 94vh"></div>
     <script type="text/javascript">
+        var maxDistance = 2000;
 
-    var map = L.map('map', {minZoom:2}).setView([30,0], 2);
+        var map = L.map('map', {minZoom:2}).setView([30,0], 2);
 
-    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
+        L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
 
-    var myFirebase = new Firebase("https://glowing-torch-2950.firebaseio.com/items/");
-    myFirebase.orderByKey().on("child_added", function(snapshot) {
-        var person = snapshot.val();
+        var myFirebase = new Firebase("https://glowing-torch-2950.firebaseio.com/items/");
+        myFirebase.orderByKey().on("child_added", function(snapshot) {
+            var person = snapshot.val();
 
-        //var marker = L.circle([person.lat,person.lng], person.distance * 1000).addTo(map);
-        var marker = L.marker([person.lat,person.lng]).addTo(map);
+            var marker = L.marker([person.lat,person.lng]).addTo(map);
+            var town = person.town + ' , ' ;
+            marker.bindPopup('<p> ' + person.name + '<br/>' + town + person.country + '</p>');
 
-
-        marker.bindPopup('<p> ' + person.name + '<br/>' + town + country + '</p>');
-
-    });
-
+        });
 
 
 
