--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ var tribeNumber;
 var ref = new Firebase("https://glowing-torch-2950.firebaseio.com/items");
   ref.on("value", function(snapshot) {
     data = snapshot.val();
-    tribeNumber = Object.keys(data).length;
+    tribeNumber = Object.keys(data).length -1;
     console.log(tribeNumber + ' fellow udacity geeks have joined so far.');
     console.log("Tribe data: ", data);
 }, function (errorObject) {
